Exporting authProviders from lib folder

--- a/tsconfig-cjs.json
+++ b/tsconfig-cjs.json
@@ -8,6 +8,6 @@
 		"composite": true
 	},
 	"exclude": ["node_modules", "lib", "samples", "spec/development"],
-	"include": ["./src/**/*.ts"],
+	"include": ["./src/**/*.ts", "spec/"],
 	"references": []
 }
