--- a/tsconfig-es.json
+++ b/tsconfig-es.json
@@ -8,5 +8,6 @@
 		"composite": true
 	},
 	"exclude": ["node_modules", "lib", "samples", "spec/**"],
-	"include": ["./src/**/*.ts"]
+	"include": ["./src/**/*.ts"],
+	"references": []
 }
