--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 	"typings": "lib/src/index",
 	"files": [
 		"lib/",
-		"src/"
+		"src/",
+		"authProviders/"
 	],
 	"types": "./lib/src/index.d.ts",
 	"dependencies": {
@@ -48,7 +49,7 @@
 		"build:es": "tsc --p tsconfig-es.json",
 		"build:cjs": "tsc --p tsconfig-cjs.json",
 		"pre-build": "npm run setVersion",
-		"build": "npm run pre-build && npm run build:cjs && npm run build:es && rollup -c",
+		"build": "npm run pre-build && npm run build:cjs1 && npm run build:es1 && rollup -c",
 		"test": "npm run build:cjs && mocha lib/spec/content && mocha lib/spec/core && mocha lib/spec/middleware && mocha lib/spec/tasks",
 		"test:content": "tsc --p spec/tsconfig.json && mocha spec/content",
 		"test:core": "tsc --p spec/tsconfig.json && mocha spec/core",
