--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,7 +18,7 @@
 			"request": "launch",
 			"name": "Run Content tests",
 			"program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
-			"args": ["${workspaceRoot}/lib/spec/content/*.js"],
+			"args": ["${workspaceRoot}/lib/test/common/**/*.js"],
 			"cwd": "${workspaceRoot}",
 			"preLaunchTask": "Run Compile",
 			"outFiles": [],
@@ -29,7 +29,7 @@
 			"request": "launch",
 			"name": "Run Core tests",
 			"program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
-			"args": ["${workspaceRoot}/lib/spec/core/*.js"],
+			"args": ["${workspaceRoot}/lib/test/common/core/*.js"],
 			"cwd": "${workspaceRoot}",
 			"preLaunchTask": "Run Compile",
 			"outFiles": [],
@@ -40,7 +40,7 @@
 			"request": "launch",
 			"name": "Run Middleware tests",
 			"program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
-			"args": ["${workspaceRoot}/lib/spec/middleware/*.js"],
+			"args": ["${workspaceRoot}/lib/test/common/middleware/*.js"],
 			"cwd": "${workspaceRoot}",
 			"preLaunchTask": "Run Compile",
 			"outFiles": [],
@@ -51,7 +51,7 @@
 			"request": "launch",
 			"name": "Run Tasks tests",
 			"program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
-			"args": ["${workspaceRoot}/lib/spec/tasks/*.js"],
+			"args": ["${workspaceRoot}/lib/test/common/tasks/*.js"],
 			"cwd": "${workspaceRoot}",
 			"preLaunchTask": "Run Compile",
 			"outFiles": [],
@@ -62,7 +62,7 @@
 			"request": "launch",
 			"name": "Run Workload tests",
 			"program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
-			"args": ["${workspaceRoot}/spec/development/workload/*.js"],
+			"args": ["${workspaceRoot}/test/common/development/workload/*.js"],
 			"cwd": "${workspaceRoot}",
 			"preLaunchTask": "Run Compile",
 			"outFiles": [],
