--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"eslint": "^7.6.0",
 		"eslint-config-prettier": "^6.11.0",
 		"eslint-plugin-prettier": "^3.1.4",
+		"eslint-plugin-simple-import-sort": "^7.0.0",
 		"gulp": "^4.0.2",
 		"husky": "^2.2.0",
 		"isomorphic-fetch": "^2.2.1",
@@ -56,6 +57,7 @@
 		"test:development": "tsc --p spec/tsconfig.json && mocha spec/development/workload",
 		"test:workload": "tsc --p spec/tsconfig.json && mocha spec/development/workload",
 		"lint": "eslint . --ext .ts",
+		"lint:fix": "eslint . --ext .ts --fix",
 		"format:css": "prettier --write \"**/*.css\"",
 		"format:html": "prettier --write \"**/*.html\"",
 		"format:js": "prettier --write \"**/*.js\"",
