adding js sample

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ src/**/*.js.map
 src/**/*.d.ts
 
 samples/**/*/secrets.ts
+samples/**/*/secrets.js
 samples/node/secrets.json
 samples/browser/src/secrets.js
 samples/browser/src/graph-js-sdk.js
