--- a/samples/tokenCredentialSamples/AuthenticationCodeFlow/package.json
+++ b/samples/tokenCredentialSamples/AuthenticationCodeFlow/package.json
@@ -11,6 +11,7 @@
 		"open": "^7.2.1",
 		"qs": "^6.9.4",
 		"ts-node": "^9.0.0",
-		"typescript": "^4.0.3"
+		"typescript": "^4.0.3",
+		"@microsoft/microsoft-graph-client": "file:../../../"
 	}
 }
