--- a/samples/tokenCredentialSamples/ClientCredentialFlow/package.json
+++ b/samples/tokenCredentialSamples/ClientCredentialFlow/package.json
@@ -3,11 +3,12 @@
 	"version": "1.0.0",
 	"description": "Example of using the Microsoft Graph JS Client with client credential flow token credential",
 	"scripts": {
-		"start": "npm install && npx ts-node src/index.ts"
+		"start": "npm install && npx ts-node typeScript/index.ts"
 	},
 	"dependencies": {
 		"@azure/identity": "^1.2.0",
 		"ts-node": "^9.0.0",
-		"typescript": "^4.0.5"
+		"typescript": "^4.0.5",
+		"@microsoft/microsoft-graph-client": "file:../../../"
 	}
 }
