Correcting doc language errors

--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,8 @@ src/**/*.js
 src/**/*.js.map
 src/**/*.d.ts
 
-samples/**/*/secrets.ts
-samples/**/*/secrets.js
+samples/**/secrets.ts
+samples/**/secrets.js
 samples/node/secrets.json
 samples/browser/src/secrets.js
 samples/browser/src/graph-js-sdk.js
