--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,10 +4,6 @@
 	"plugins": ["@typescript-eslint", "prettier", "simple-import-sort"],
 	"extends": ["eslint:recommended", "plugin:@typescript-eslint/eslint-recommended", "plugin:@typescript-eslint/recommended", "prettier"],
 	"rules": {
-		"no-useless-catch": "error", //TODO- Remove the unnecessary try-catch lines used and enable no-useless-catch rule.
-		"prefer-rest-params": "off",
-		"no-constant-condition": "error",
-		// @typescript-eslint rules
 		"@typescript-eslint/no-empty-interface": "warn",
 		"@typescript-eslint/ban-types": "off",
 		"@typescript-eslint/no-unused-vars": "error",
@@ -155,7 +151,9 @@
 		"@typescript-eslint/no-namespace": "off",
 		"@typescript-eslint/no-parameter-properties": "off",
 		"@typescript-eslint/no-array-constructor": "error",
-		// eslint rules
+		"no-useless-catch": "error",
+		"prefer-rest-params": "off",
+		"no-constant-condition": "error",
 		"simple-import-sort/imports": "error",
 		"brace-style": "error",
 		"constructor-super": "error",
