--- a/package.json
+++ b/package.json
@@ -92,7 +92,8 @@
 		"test:coverage": "TS_NODE_PROJECT='./tsconfig-cjs.json' nyc mocha --require isomorphic-fetch -r ts-node/register test/common/**/*.ts && mocha --require isomorphic-fetch -r ts-node/register test/common/**/*.ts",
 		"test:cjs": "npm run build:sub_cjs   && mocha  'lib/test/common/**/*.js' --require  isomorphic-fetch &&  mocha  'lib/test/node/**/*.js' --require  isomorphic-fetch",
 		"test:esm": "npm run build:sub_es  && mocha  'lib/es/test/common/**/*.js' --require  esm --require  isomorphic-fetch &&  mocha  'lib/es/test/node/**/*.js' --require  esm --require  isomorphic-fetch",
-		"karma": "karma  start --single-run --browsers ChromeHeadless karma.conf.js"
+		"karma": "karma  start --single-run --browsers ChromeHeadless karma.conf.js",
+		"test:l": "mocha  'lib/test/common/**/*.js' --require  isomorphic-fetch -grep LargeFileUploadTask.ts"
 	},
 	"repository": {
 		"type": "git",
