--- a/samples/node/package.json
+++ b/samples/node/package.json
@@ -9,9 +9,6 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"bytes": "^3.1.0",
-		"isomorphic-fetch": "^2.2.1",
-		"minimist": "^1.2.5",
-		"path": "^0.12.7"
+		"isomorphic-fetch": "^2.2.1"
 	}
 }
