--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
 		"test:coverage": "TS_NODE_PROJECT='./tsconfig-cjs.json' nyc mocha --require isomorphic-fetch -r ts-node/register test/common/**/*.ts && mocha --require isomorphic-fetch -r ts-node/register test/common/**/*.ts",
 		"test:development": "tsc --p test/tsconfig-test-development.json &&  mocha  'lib/test/development/**/*.js' --require  isomorphic-fetch",
 		"test:esm": "npm run build:sub_es  && mocha  'lib/es/test/common/**/*.js' --require  esm --require  isomorphic-fetch &&  mocha  'lib/es/test/node/**/*.js' --require  esm --require  isomorphic-fetch",
-		"stream":"mocha  'lib/test/node/**/*.js' --require  isomorphic-fetch --grep StreamUpload"
+		"stream": "mocha  'lib/test/node/**/*.js' --require  isomorphic-fetch --grep StreamUpload",
+		"stest": "mocha  'lib/test/common/**/*.js' --require  isomorphic-fetch --grep LargeFileUploadTask.ts",
+		"roll": "rollup -c"
 	},
 	"nyc": {
 		"all": true,
@@ -65,13 +67,12 @@
 	"dependencies": {
 		"@babel/runtime": "^7.12.5",
 		"sinon": "^9.2.4",
+		"stream-browserify": "^3.0.0",
 		"tslib": "^1.9.3"
 	},
-	"browser":
-	{
-		"stream":"stream-browserify"
+	"browser": {
+		"stream": "stream-browserify"
 	},
-
 	"devDependencies": {
 		"@azure/identity": "^1.2.0",
 		"@babel/core": "^7.12.10",
@@ -95,7 +96,6 @@
 		"eslint-plugin-simple-import-sort": "^7.0.0",
 		"esm": "^3.2.25",
 		"form-data": "^2.3.3",
-		"fs": "0.0.1-security",
 		"gulp": "^4.0.2",
 		"husky": "^2.2.0",
 		"isomorphic-fetch": "^3.0.0",
@@ -122,6 +122,12 @@
 			"optional": true
 		},
 		"msal": {
+			"optional": true
+		},
+		"stream-browserify": {
+			"optional": true
+		},
+		"buffer": {
 			"optional": true
 		}
 	}
