--- a/.github/workflows/ci_validation.yml
+++ b/.github/workflows/ci_validation.yml
@@ -3,7 +3,7 @@
 
 name: Graph JS SDK CI
 
-on: [pull_request]
+on: [push, pull_request]
 
 jobs:
   build:
@@ -26,7 +26,7 @@ jobs:
     - run: npm test
     - run: npm run test:coverage
     - run: npm run karma
-    - name: Publish coverage
+    - name: Coveralls
       uses: coverallsapp/github-action@master
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }} 
