--- a/.github/workflows/ci_validation.yml
+++ b/.github/workflows/ci_validation.yml
@@ -12,11 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [8.x, 10.x, 12.x, 14.x, 15.x]
-        # Adding version 8.x considering SharePoint Framework depends on JS Graph library
-        # https://docs.microsoft.com/en-us/sharepoint/dev/spfx/compatibility
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
+        node-version: [10.x, 12.x, 14.x, 15.x]
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
