--- a/.gitignore
+++ b/.gitignore
@@ -22,10 +22,8 @@ src/**/*.d.ts
 
 samples/**/secrets.ts
 samples/**/secrets.js
-samples/node/secrets.json
-samples/browser/src/secrets.js
-samples/browser/src/graph-js-sdk.js
-samples/browser/src/graph-es-sdk.js
+samples/node_modules/**
+samples/lib/
 
 test/development/secrets.ts
 
