--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
 	},
 	"devDependencies": {
 		"@azure/identity": "^1.3.0",
+		"@azure/msal-browser": "^2.15.0",
 		"@babel/core": "^7.12.10",
 		"@babel/plugin-transform-runtime": "^7.12.10",
 		"@babel/preset-env": "^7.12.11",
@@ -126,6 +127,9 @@
 			"optional": true
 		},
 		"stream-browserify": {
+			"optional": true
+		},
+		"@azure/msal-browser": {
 			"optional": true
 		}
 	},
