--- a/tsconfig-sub-cjs.json
+++ b/tsconfig-sub-cjs.json
@@ -7,7 +7,7 @@
 		"outDir": "authProviders"
 	},
 	"exclude": ["node_modules", "lib", "samples", "test/", "src"],
-	"include": ["authProviderOptions/azureTokenCredentials/", "authProviderOptions/msal/", "authProviderOptions/authCodeMsalBrowser"],
+	"include": ["authProviderOptions/azureTokenCredentials/", "authProviderOptions/authCodeMsalBrowser"],
 	"references": [
 		{
 			"path": "./tsconfig-cjs.json"
