--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
 	"dependencies": {
 		"@babel/runtime": "^7.12.5",
 		"@microsoft/kiota-abstraction": "file:./../../SDKS/kiota/abstractions/typescript",
-		"@microsoft/kiota-abstractions": "file:microsoft-kiota-abstractions-1.0.24.tgz",
+		"@microsoft/kiota-abstractions": "file:microsoft-kiota-abstractions-1.0.24 copy.tgz",
 		"tslib": "^2.2.0"
 	},
 	"devDependencies": {
