--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
 	},
 	"dependencies": {
 		"@babel/runtime": "^7.12.5",
-		"tslib": "^2.2.0"
+		"tslib": "^2.2.0",
+        "@microsoft/kiota-abstractions": "*"
 	},
 	"devDependencies": {
 		"@azure/identity": "^1.3.0",
