adding node stream interface

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,12 @@
 		"@typescript-eslint/no-unused-vars": "error",
 		"@typescript-eslint/no-explicit-any": "off",
 		"@typescript-eslint/explicit-module-boundary-types": "off",
-		"prettier/prettier": "error",
+		"prettier/prettier": [
+            "error",
+            {
+              "endOfLine": "auto"
+            }
+          ],
 		"@typescript-eslint/no-var-requires": "error",
 		"@typescript-eslint/no-non-null-assertion": "error",
 		"@typescript-eslint/naming-convention": [
