--- a/tsconfig-base.json
+++ b/tsconfig-base.json
@@ -1,11 +1,11 @@
 {
-	"compilerOptions": {
-		"importHelpers": true,
-		"noEmitOnError": true,
-		"noImplicitAny": false,
-		"moduleResolution": "node",
-		"removeComments": false,
-		"sourceMap": true,
-		"declaration": true
-	}
+    "compilerOptions": {
+        "importHelpers": true,
+        "noEmitOnError": true,
+        "noImplicitAny": false,
+        "moduleResolution": "node",
+        "removeComments": false,
+        "sourceMap": true,
+        "declaration": true,
+    }
 }
