using reqinit instead of fetch-init

--- a/packages/graph/tsconfig.cjs.json
+++ b/packages/graph/tsconfig.cjs.json
@@ -15,7 +15,7 @@
             //     "../serialization/json"
             // ],
             "@microsoft/kiota-http-fetchlibrary": [
-                "../http/fetchlibrary"
+                "../http/fetch"
             ],
         },
         "files": [],
