--- a/packages/abstractions/package.json
+++ b/packages/abstractions/package.json
@@ -1,75 +1,45 @@
 {
     "name": "@microsoft/kiota-abstractions",
-    "version": "1.0.21",
+    "version": "1.0.24",
     "description": "Core abstractions for kiota generated libraries in TypeScript and JavaScript",
-    "keywords": [
-        "kiota",
-        "openAPI",
-        "Microsoft",
-        "Graph"
-    ],
-    "homepage": "https://github.com/microsoft/kiota#readme",
-    "bugs": {
-        "url": "https://github.com/microsoft/kiota/issues"
+    "main": "dist/cjs/index.js",
+    "module": "dist/es/index.js",
+    "types": "dist/cjs/index.d.ts",
+    "scripts": {
+      "build": "npm run build:cjs && npm run build:esm",
+      "build:cjs": "tsc -p tsconfig.cjs.json",
+      "build:esm":"tsc -p tsconfig.es.json",
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "clean": "rm -r ./dist"
     },
     "repository": "git://github.com/microsoft/kiota.git",
-    "license": "MIT",
+    "keywords": [
+      "kiota",
+      "openAPI",
+      "Microsoft",
+      "Graph"
+    ],
     "author": "Microsoft",
-    "main": "dist/cjs/src/index.js",
-    "module": "dist/es/src/index.js",
-    "types": "dist/cjs/src/index.d.ts",
-    "browser": {
-        "dist/es/src/utils/index.js": "dist/es/src/utils/browser/index.js"
+    "license": "MIT",
+    "bugs": {
+      "url": "https://github.com/microsoft/kiota/issues"
     },
-    "scripts": {
-        "build": "npm run build:cjs && npm run build:es",
-        "build:cjs": "tsc -p tsconfig.cjs.json",
-        "build:es": "tsc -p tsconfig.es.json",
-        "clean": "rm -r ./dist",
-        "karma": "npm run rollup && karma  start --single-run --browsers ChromeHeadless karma.conf.js",
-        "lint": "eslint . --ext .ts",
-        "lint:fix": "eslint . --ext .ts --fix",
-        "rollup": "rollup -c",
-        "test": "npm run test:cjs && npm run test:es",
-        "test:cjs": "npm run build:cjs && mocha  'dist/cjs/test/node/**/*.js'",
-        "test:es": " npm run build:es && mocha 'dist/es/test/node/**/*.js'  --require  esm"
+    "homepage": "https://github.com/microsoft/kiota#readme",
+    "devDependencies": {
+      "@types/node": "^16.11.13",
+      "@types/uri-template-lite": "^19.12.1",
+      "@types/uuid": "^8.3.3",
+      "typescript": "^4.5.4"
+    },
+    "publishConfig": {
+      "registry": "https://npm.pkg.github.com"
     },
     "dependencies": {
-        "tinyduration": "^3.2.2",
+    
+      "tinyduration": "^3.2.2",
         "tslib": "^2.3.1",
         "uri-template-lite": "^22.1.0",
         "uuid": "^8.3.2"
-    },
-    "devDependencies": {
-        "@types/uri-template-lite": "^19.12.1",
-        "@rollup/plugin-commonjs": "^21.0.0",
-        "@rollup/plugin-node-resolve": "^13.0.5",
-        "@types/chai": "^4.2.22",
-        "@types/mocha": "^9.0.0",
-        "@types/node": "^17.0.13",
-        "@types/sinon": "^10.0.4",
-        "@types/uuid": "^8.3.4",
-        "@typescript-eslint/eslint-plugin": "^5.0.0",
-        "@typescript-eslint/parser": "^5.0.0",
-        "chai": "^4.3.4",
-        "eslint": "^8.8.0",
-        "eslint-config-prettier": "^8.3.0",
-        "eslint-plugin-prettier": "^4.0.0",
-        "eslint-plugin-simple-import-sort": "^7.0.0",
-        "esm": "^3.2.25",
-        "karma": "^6.3.2",
-        "karma-chai": "^0.1.0",
-        "karma-chrome-launcher": "^3.1.0",
-        "karma-firefox-launcher": "^2.1.0",
-        "karma-mocha": "^2.0.1",
-        "karma-typescript": "^5.2.0",
-        "mocha": "^8.4.0",
-        "prettier": "^2.4.1",
-        "rollup": "^2.58.0",
-        "rollup-plugin-terser": "^7.0.2",
-        "typescript": "^4.5.5"
-    },
-    "publishConfig": {
-        "registry": "https://npm.pkg.github.com"
     }
-}
+  }
+  
