--- a/packages/graph/package.json
+++ b/packages/graph/package.json
@@ -51,8 +51,7 @@
 		"test:cjs": "npm run build:sub_cjs   && mocha  'lib/test/common/**/*.js' --require  isomorphic-fetch &&  mocha  'lib/test/node/**/*.js' --require  isomorphic-fetch",
 		"test:coverage": "TS_NODE_PROJECT='./tsconfig-cjs.json' nyc mocha --require isomorphic-fetch -r ts-node/register test/common/**/*.ts && mocha --require isomorphic-fetch -r ts-node/register test/common/**/*.ts",
 		"test:development": "tsc --p test/tsconfig-test-development.json &&  mocha  'lib/test/development/**/*.js' --require  isomorphic-fetch",
-		"test:esm": "npm run build:sub_es  && mocha  'lib/es/test/common/**/*.js' --require  esm --require  isomorphic-fetch &&  mocha  'lib/es/test/node/**/*.js' --require  esm --require  isomorphic-fetch",
-        "clean": "del ./node_modules"
+		"test:esm": "npm run build:sub_es  && mocha  'lib/es/test/common/**/*.js' --require  esm --require  isomorphic-fetch &&  mocha  'lib/es/test/node/**/*.js' --require  esm --require  isomorphic-fetch"
 	},
 	"nyc": {
 		"all": true,
@@ -68,6 +67,7 @@
 	},
 	"dependencies": {
 		"@microsoft/kiota-abstractions": "*",
+        "@microsoft/kiota-http-fetchlibrary":"*",
 		"tslib": "^2.2.0",
         "isomorphic-fetch": "^2.2.1"
 	},
