--- a/packages/http/fetch/tsconfig.cjs.json
+++ b/packages/http/fetch/tsconfig.cjs.json
@@ -12,7 +12,7 @@
         }
     },
 	"exclude": ["node_modules", "dist"],
-	"include": ["./src/**/*.ts"],
+	"include": ["src"],
     "files": [],
     "references": [
         {
