--- a/packages/abstractions/package.json
+++ b/packages/abstractions/package.json
@@ -10,7 +10,7 @@
       "build:cjs": "tsc -p tsconfig.cjs.json",
       "build:esm":"tsc -p tsconfig.es.json",
       "test": "echo \"Error: no test specified\" && exit 1",
-      "clean": "rm -r ./dist"
+      "clean": "rimraf ./dist ./node_modules"
     },
     "repository": "git://github.com/microsoft/kiota.git",
     "keywords": [
