extending graph core client

--- a/packages/graphService/tsconfig.cjs.json
+++ b/packages/graphService/tsconfig.cjs.json
@@ -3,7 +3,8 @@
     "compilerOptions":{
         "target": "es6",
         "module": "commonjs",
-        "outDir": "./dist/cjs"
+        "outDir": "./dist/cjs",
+        "composite": true
     },
 	"exclude": ["node_modules", "dist"],
 	"include": ["./src/**/*.ts", "./test"],
