--- a/packages/serialization/json/package.json
+++ b/packages/serialization/json/package.json
@@ -38,6 +38,6 @@
     },
     "dependencies": {
         "tslib": "^2.3.1",
-        "@microsoft/kiota-abstractions": "^1.0.27"
+        "@microsoft/kiota-abstractions": "*"
     }
 }
