--- a/packages/testLibraries/package.json
+++ b/packages/testLibraries/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "testlibraries",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-      "graph-service-library":"*"
-  }
+    "name": "testlibraries",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "clean": "rimraf dist"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "graph-service-library": "*"
+    }
 }
