--- a/packages/testLibraries/package.json
+++ b/packages/testLibraries/package.json
@@ -1,11 +1,11 @@
 {
-    "name": "testlibraries",
-    "version": "1.0.0",
+    "name": "test_lib",
+    "version": "0.0.0",
     "description": "",
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "clean": "rimraf dist"
+        "clean": "rimraf -r ./dist"
     },
     "author": "",
     "license": "ISC",
