--- a/packages/http/fetch/package.json
+++ b/packages/http/fetch/package.json
@@ -10,7 +10,7 @@
         "build:cjs": "tsc -b tsconfig.cjs.json",
         "build:esm": "tsc -b tsconfig.es.json",
         "test": "echo \"Error: no test specified\" && exit 1",
-        "clean": "rimraf ./dist ./node_modules"
+        "clean": "rimraf -r ./dist ./node_modules"
     },
     "repository": {
         "type": "git",
